--- a/server/package.json
+++ b/server/package.json
@@ -21,18 +21,22 @@
   },
   "homepage": "https://github.com/N0og/Marketplace_Imobiliario#readme",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.2",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^9.0.2",
     "mariadb": "^3.2.3",
     "mysql2": "^3.7.1",
     "reflect-metadata": "^0.2.1",
     "typeorm": "^0.3.19"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.11.5",
     "@typescript-eslint/eslint-plugin": "^6.19.0",
     "@typescript-eslint/parser": "^6.19.0",
