--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,7 @@
     "jsonwebtoken": "^9.0.2",
     "mariadb": "^3.2.3",
     "mysql2": "^3.7.1",
+    "nodemailer": "^6.9.8",
     "reflect-metadata": "^0.2.1",
     "typeorm": "^0.3.19"
   },
@@ -38,6 +39,7 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.11.5",
+    "@types/nodemailer": "^6.4.14",
     "@typescript-eslint/eslint-plugin": "^6.19.0",
     "@typescript-eslint/parser": "^6.19.0",
     "eslint": "^8.56.0",
