--- a/server/.env-example
+++ b/server/.env-example
@@ -6,3 +6,8 @@ DB_PASSWORD =
 SERVER_PORT = 
 JWT_SECRET= 
 BASE_URL = 
+EMAIL_SERVICE =
+EMAIL_HOST =
+EMAIL_PORT =
+EMAIL_USER =
+EMAIL_PASSWORD =
