Implementação do Sistema de Postagens e Melhorias de Autenticação.
- Reorganização das pastas, incluindo a criação da pasta raiz "uploads/images";

- Atualização da entidade Posts para refletir as novas exigências;

- Criação do controlador Posts para gerenciar as operações relacionadas às postagens;

- Implementação do registro de postagem juntamente com o mecanismo de upload de imagens;

- Aprimoramentos na camada de autenticação, incluindo melhorias e implementações adicionais (em andamento: desenvolvimento do Refresh Token).

--- a/server/.env-example
+++ b/server/.env-example
@@ -1,13 +1,22 @@
+#DATABASE CONFIG
 DB_HOST = 
 DB_PORT = 
 DB_NAME = 
 DB_USER = 
 DB_PASSWORD = 
-SERVER_PORT = 
-JWT_SECRET= 
+
+#SERVER CONFIG
 BASE_URL = 
-EMAIL_SERVICE =
-EMAIL_HOST =
-EMAIL_PORT =
-EMAIL_USER =
-EMAIL_PASSWORD =
+SERVER_PORT = 
+FRONT_HOST = 
+
+#TOKEN CONFIG
+JWT_SECRET = 
+JWT_REFRESH_SECRET = 
+
+#MAILSEND CONFIG
+EMAIL_SERVICE = 
+EMAIL_HOST = 
+EMAIL_PORT = 
+EMAIL_USER = 
+EMAIL_PASSWORD = 
