--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/N0og/Marketplace_Imobiliario#readme",
   "dependencies": {
+    "@types/multer": "^1.4.11",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.2",
@@ -28,10 +29,13 @@
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^9.0.2",
     "mariadb": "^3.2.3",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.7.1",
     "nodemailer": "^6.9.8",
     "reflect-metadata": "^0.2.1",
-    "typeorm": "^0.3.19"
+    "save-dev": "^0.0.1-security",
+    "typeorm": "^0.3.19",
+    "yarn": "^1.22.22"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
