RefreshToken com Banco de Dados
Em desenvolvimento o processo de reautenticação.

--- a/server/.env-example
+++ b/server/.env-example
@@ -11,7 +11,9 @@ SERVER_PORT =
 FRONT_HOST = 
 
 #TOKEN CONFIG
-JWT_SECRET = 
+JWT_SECRET =
+JWT_EXPIRATION = 
+JWT_REFRESH_EXPIRATION =
 JWT_REFRESH_SECRET = 
 
 #MAILSEND CONFIG
