--- a/server/package.json
+++ b/server/package.json
@@ -4,9 +4,8 @@
   "description": "API do MarketPlace Imobiliario - Projeto de Aprendizado.",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon ./src/server.ts",
+    "dev": "ts-node-dev ./src/server.ts",
     "build": "tsc",
-    "dev:server": "ts-node-dev src/server.ts",
     "typeorm": "typeorm-ts-node-esm",
     "migration:generate": "typeorm-ts-node-commonjs migration:generate -d ./src/database/data-source.ts ./src/database/migrations/default"
   },
